--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: default
 						<h3>NOTÍCIAS</h3>
 						<center><hr class="border"/></center>
 					</div>
-						<div class="col-sm-12">
+						<div class="col-sm-9">
 							{% for post in site.posts %}
 							   <div class="content-box col-md-6 col-xs-12">
 									<div class="section_title2">
@@ -89,6 +89,10 @@ layout: default
 									</div>
 								</div>   
 							{% endfor %}
+						</div>
+						<div class="col-sm-3">
+							<a class="twitter-timeline" href="https://twitter.com/DBpedia_pt" data-widget-id="723152685340364806">Tweets de @DBpedia_pt</a>
+							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						</div>
 					</div>
 				</div>
