--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@ layout: default
 			</div>
 		</div>
 	</div>
+	<section class="notice-area">
+		<div class="content-block section-padding">
+			<div class="container">
+				<div class="row ">   
+					<a href="http://wiki.dbpedia.org/why-is-dbpedia-so-important"><img alt="" src="/sites/default/files/DBpedia_Community_Banner_420x85mm_20160616_L2.jpg" width="100%"></a>
+				</div>
+			</div>
+		</div>
+	 </section>
 			
 		<section class="container notice-area">
 			<div class="content-block section-padding">
