--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@ layout: default
 	   <div class="container main_slider">
 		   <div class="fluid_container">
 			   <img src="img/banner.png" class="banner-home" />
+			   <a href="http://wiki.dbpedia.org/why-is-dbpedia-so-important"><img alt="" src="/img/DBpedia_Community_Banner_420x85mm_20160616_L2.jpg"></a>
 		   </div>
-	<section class="notice-area">
-		<div class="content-block section-padding">
-			<div class="container">
-				<div class="row ">   
-					<a href="http://wiki.dbpedia.org/why-is-dbpedia-so-important"><img alt="" src="/img/DBpedia_Community_Banner_420x85mm_20160616_L2.jpg" width="97.4%"></a>
-				</div>
-			</div>
-		</div>
-	 </section>		   
 		   
 		<!--<section class="notice-area">
 			<div class="content-block section-padding">
