--- a/index.html
+++ b/index.html
@@ -5,51 +5,9 @@ layout: default
 	<div class="home">
 	   <div class="container main_slider">
 		   <div class="fluid_container">
-			   <img src="img/banner.png" class="banner-home" />
+			   <div id="bannerindex"><img src="img/dbpedia_plain.png" class="banner-home" /></div>
 			   <a href="http://wiki.dbpedia.org/why-is-dbpedia-so-important"><img alt="" src="/img/DBpedia_Community_Banner_420x85mm_20160616_L2.jpg"></a>
 		   </div>
-		   
-		<!--<section class="notice-area">
-			<div class="content-block section-padding">
-				<div class="container">
-					<div class="row ">
-					<div class="title-home">
-						<h3>PROJETOS EM DESTAQUE</h3>
-						<center><hr class="border"/></center>
-					</div>
-						<div class="col-sm-12">
-							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-							  <ol class="carousel-indicators">
-								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-							  </ol>
-							  <div class="carousel-inner" role="listbox">
-								<div class="carousel-item active">
-								  <img src="..." alt="First slide">
-								</div>
-								<div class="carousel-item">
-								  <img src="..." alt="Second slide">
-								</div>
-								<div class="carousel-item">
-								  <img src="..." alt="Third slide">
-								</div>
-							  </div>
-							  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-								<span class="icon-prev" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
-							  </a>
-							  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-								<span class="icon-next" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
-							  </a>
-							</div>							
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>-->
-		
 	<div class="breadcrumb_area">
 		<div class="container">
 			<div class="row">
@@ -71,11 +29,14 @@ layout: default
 			<div class="content-block section-padding">
 				<div class="container">
 					<div class="row ">
-					<div class="title-home">
-						<h3>NOTÍCIAS</h3>
-						<center><hr class="border"/></center>
+						<div class="title-home col-md-12">
+							<h3>NOTÍCIAS</h3>
+							<center><hr class="border"/></center>
+						</div>
 					</div>
-						<div class="col-sm-9">
+					<div class="row ">
+						<div class="col-md-10">
+							{% assign counter = 0 %}
 							{% for post in site.posts limit: 6 %}
 							   <div class="content-box col-md-6 col-xs-12">
 									<div class="section_title2">
@@ -88,10 +49,15 @@ layout: default
 										</p>
 										<a class="btn-more" href="{{ post.url | prepend: site.baseurl }}">SAIBA MAIS</a>
 									</div>
-								</div>   
+								</div> 
+								{% assign counter = counter | plus: 1 %}
+								{% if counter == 2 %} 
+									{% assign counter = 0 %}
+									 <div class="clearfix"></div>
+								{% endif %}  
 							{% endfor %}
 						</div>
-						<div class="col-sm-2">
+						<div class="col-md-2">
 							<a class="twitter-timeline" href="https://twitter.com/DBpedia_pt" data-widget-id="723152685340364806">Tweets de @DBpedia_pt</a>
 							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						</div>
