--- a/index.html
+++ b/index.html
@@ -61,22 +61,26 @@ layout: default
 							<a class="twitter-timeline" href="https://twitter.com/DBpedia_pt" data-widget-id="723152685340364806">Tweets de @DBpedia_pt</a>
 							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						</div>
-						<div class="row">
-							<div class="pagination">
-							  {% if paginator.previous_page %}
-							    <a href="{{ paginator.previous_page_path }}" class="previous">Anterior</a>
-							  {% else %}
-							    <span class="previous">Anterior</span>
-							  {% endif %}
-							  <span class="page_number ">Página: {{ paginator.page }} de {{ paginator.total_pages }}</span>
-							  {% if paginator.next_page %}
-							    <a href="{{ paginator.next_page_path }}" class="next">Próxima</a>
-							  {% else %}
-							    <span class="next">Próxima</span>
-							  {% endif %}
-							</div>
-						</div>
 					</div>
+					<div class="row">
+						  <div class="col-md-2">
+							  {% if paginator.previous_page %}
+							    <a href="{{ paginator.previous_page_path }}" class="prev">Anterior</a>
+							  {% else %}
+							    <span class="prev">Anterior</span>
+							  {% endif %}
+		                                 </div>
+		                                 <div class="col-md-1"> {{ paginator.page }} de {{ paginator.total_pages }}</div>
+						<div class="col-md-2">
+						  {% if paginator.next_page %}
+						    <a href="{{ paginator.next_page_path }}" class="next">Próximo</a>
+						  {% else %}
+						    <span class="next">Próximo</span>
+						  {% endif %}
+						</div>
+  						 <div class="col-md-7"></div>
+					</div>
+
 				</div>
 			</div>
 		</section>
