--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: default
 <body id="body" class="home_2">
 	<div class="home">
 	   <div class="container main_slider">
-		   <div class="fluid_container">
+		   <div class="fluid_container  hidden-xs">
 			   <div id="bannerindex"><img src="/img/dbpedia_plain.png" class="banner-home" /></div>
 			   <a href="http://wiki.dbpedia.org/why-is-dbpedia-so-important"><img alt="" src="/img/DBpedia_Community_Banner_420x85mm_20160616_L2.jpg"></a>
 		   </div>
-	<div class="breadcrumb_area">
+	<div class="breadcrumb_area  hidden-xs">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12">
@@ -57,7 +57,7 @@ layout: default
 							    {% endif %}  
 							{% endfor %}
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-2  hidden-xs">
 							<a class="twitter-timeline" href="https://twitter.com/DBpedia_pt" data-widget-id="723152685340364806">Tweets de @DBpedia_pt</a>
 							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 						</div>
